--- a/scene.yaml
+++ b/scene.yaml
@@ -15,22 +15,22 @@ global:
     # https://mapzen.com/documentation/overview/#developer-accounts-and-api-keys
     sdk_api_key: '3eqm2_bfTNGZ85ar20fVyA'     # set this value to your Mapzen API key
 
-    black_color:                  [0.440,0.440,0.440]
-    dark_color:                   [0.410,0.410,0.410]
-    mid_color:                    [0.380,0.380,0.380]
-    midlight_color:               [0.350,0.350,0.350]
-    extralight_color:             [0.320,0.320,0.320]
-    light_color:                  [0.300,0.300,0.300]
-    lighter_color:                [0.290,0.290,0.290]
-    lightest_color:               [0.260,0.260,0.260]
-    ultralight_color:             [0.230,0.230,0.230]
-    offwhite_color:               [0.190,0.190,0.190]
-    white_color:                  [0.145,0.145,0.145]
+    black_color:                  [0.718,0.698,0.686]
+    dark_color:                   [0.730,0.712,0.701]
+    mid_color:                    [0.740,0.721,0.710]
+    midlight_color:               [0.750,0.731,0.720]
+    extralight_color:             [0.760,0.741,0.730]
+    light_color:                  [0.770,0.750,0.739]
+    lighter_color:                [0.780,0.760,0.749]
+    lightest_color:               [0.790,0.770,0.758]
+    ultralight_color:             [0.800,0.780,0.768]
+    offwhite_color:               [0.820,0.799,0.787]
+    white_color:                  [0.830,0.809,0.797]
 
-    tunnel_color:                 [0.190,0.190,0.190]
+    tunnel_color:                 [0.900,0.877,0.864]
 
-    roads_text_fill:              [0.700,0.700,0.700]
-    roads_text_stroke:            [0.224,0.224,0.224]
+    roads_text_fill:              [0.600,0.600,0.600]
+    roads_text_stroke:            [0.957,0.969,0.976]
 
     text_font_family: 'Orbitron'
 
@@ -190,7 +190,7 @@ fonts:
 
 scene:
     background:
-        color: [0.224,0.224,0.224]
+        color: [0.957,0.969,0.976]
 
 sources:
     # mapzen:
@@ -228,14 +228,14 @@ layers:
         draw:
             polygons:
                 order: global.feature_order
-                color: [0.224,0.224,0.224]
+                color: [0.957,0.969,0.976]
 
     water:
         data: { source: mapzen, layer: water }
         draw:
             polygons:
                 order: global.feature_order
-                color: [0.145,0.145,0.145]
+                color: [0.596,0.788,0.898]
 
         lakes:
             filter:
@@ -261,13 +261,13 @@ layers:
                     - { $zoom: { min: 15 } }
             draw:
                 polygons:
-                    color: [0.145,0.145,0.145]
+                    color: [0.596,0.788,0.898]
 
         other-water-areas:
             filter: { not: { kind: [ocean, lake, water, reservoir] }, $zoom: { min: 11 }, area: { min: 100 } }
             draw:
                 polygons:
-                    color: [0.145,0.145,0.145]
+                    color: [0.596,0.788,0.898]
 
     roads:
         data: { source: mapzen, layer: roads }
@@ -851,7 +851,7 @@ layers:
                     - protect_class: ['2','3','5']
             draw:
                 polygons:
-                    color: [0.200,0.200,0.200]
+                    color: [0.757,0.941,0.714]
                     visible: true
             us_national_park:
                 # yosemite national park, death valley national park, grand canyon national park
@@ -861,7 +861,7 @@ layers:
                         - protect_class: ['2','3','5']
                 draw:
                     polygons:
-                        color: [0.200,0.200,0.200]
+                        color: [0.757,0.941,0.714]
                         visible: true
 
         conservation:
@@ -871,7 +871,7 @@ layers:
                 not: { protect_class: ['2','3','5']}
             draw:
                 polygons:
-                    color: [0.200,0.200,0.200]
+                    color: [0.686,0.878,0.643]
                     visible: true
 
         national_forest_level_6:
@@ -883,14 +883,14 @@ layers:
                     - operator: ['United States Forest Service']
             draw:
                 polygons:
-                    color: [0.200,0.200,0.200]
+                    color: [0.686,0.878,0.643]
                     visible: true
 
         forest-landcover:
             filter: { kind: [forest, natural_forest, wood, natural_wood, natural_park], $zoom: { min: 10 }, not: { operator: "United States Forest Service" } }
             draw:
                 polygons:
-                    color: [0.200,0.200,0.200]
+                    color: [0.686,0.878,0.643]
                     visible: true
 
         parks-and-national-forests-not-national-park:
@@ -904,7 +904,7 @@ layers:
             # default for national forests and more?
             draw:
                 polygons:
-                    color: [0.200,0.200,0.200]
+                    color: [0.780,0.929,0.659]
                     visible: true
             national_park:
                 #filter: function() { return feature.name && (feature.name.indexOf('National Park') > -1); }
@@ -914,8 +914,48 @@ layers:
                         - not: [ protect_class: ['2','3','5','6'], operator: [ "United States National Park Service"] ]
                 draw:
                     polygons:
-                        color: [0.200,0.200,0.200]
+                        color: [0.780,0.929,0.659]
                         visible: true
+
+        university:
+            filter:
+                kind: [university, college]
+            draw:
+                polygons:
+                    color: [0.970,0.950,0.912]
+                    visible: true
+
+        golf_course:
+            filter:
+                kind: golf_course
+            draw:
+                polygons:
+                    color: [0.710,0.910,0.714]
+                    visible: true
+
+        hospital:
+            filter:
+                kind: hospital
+            draw:
+                polygons:
+                    color: [1.000,0.961,0.976]
+                    visible: true
+
+        stadium:
+            filter:
+                kind: stadium
+            draw:
+                polygons:
+                    color: [0.890,0.816,0.729]
+                    visible: true
+
+        beach:
+            filter:
+                kind: beach
+            draw:
+                polygons:
+                    color: [0.988,0.980,0.871]
+                    visible: true
 
         runway:
             filter:
@@ -933,7 +973,7 @@ layers:
             polygons:
                 visible: false
                 order: 438
-                color: [0.259,0.259,0.259]
+                color: [0.929,0.953,0.961]
 
         footprints:
             filter:
@@ -950,6 +990,27 @@ layers:
                 polygons:
                     visible: true
 
+        in_university:
+            filter: { landuse_kind: [university,school] }
+            draw:
+                polygons:
+                    visible: true
+                    color: [0.961,0.933,0.769]
+
+        in_hospital:
+            filter: { landuse_kind: hospital }
+            draw:
+                polygons:
+                    visible: true
+                    color: [0.988,0.882,0.922]
+
+        in_stadium:
+            filter: { landuse_kind: stadium }
+            draw:
+                polygons:
+                    visible: true
+                    color: [0.949,0.792,0.694]
+
     boundaries:
         data: { source: mapzen, layer: boundaries }
         # country subdivisions (states, provinces)
@@ -965,10 +1026,10 @@ layers:
                 country-outerline:
                     style: lines
                     order: function() { return (feature.sort_rank -1); }
-                    color: [0.180,0.180,0.180]
+                    color: [0.839,0.804,0.757]
                     width: [[0, 0px], [4, 2px], [8, 6px], [14, 8px], [17, 16m]]
                 lines:
-                    color: [0.145,0.145,0.145]
+                    color: [0.839,0.804,0.757]
                     width: [[0, 0px], [5, 0px], [6, 1px], [14, 15px]]
             water:
                 filter: { maritime_boundary: true }
@@ -1004,7 +1065,7 @@ layers:
                 lines:
                     dash: [1.25, 1.25]
                     order: global.feature_order
-                    color: [0.180,0.180,0.180]
+                    color: [0.839,0.804,0.757]
                     width: [[1,0.2px],[9,1.5px],[17,10m]]
             disputed:
                 filter: { kind: [disputed, line_of_control] }
@@ -1012,7 +1073,7 @@ layers:
                     lines:
                         dash: [2.0, 1.0]
                         order: global.feature_order
-                        color: [0.180,0.180,0.180]
+                        color: [0.839,0.804,0.757]
                         width: [[1, 1px], [9, 4px], [17,14m]]
 
         region:
@@ -1022,7 +1083,7 @@ layers:
                     - kind_detail: [3,4]
             draw:
                 lines:
-                    color: [0.169,0.169,0.169]
+                    color: [0.851,0.788,0.706]
                     # width: [[0, 0.5px], [9, 2px], [14, 4px], [16, 6.5px], [17, 16m]]
                     width: [[0, 0.5px], [14, 3px], [16, 7px], [17, 17m]]
 
@@ -1078,7 +1139,7 @@ layers:
                 buffer: 3px
                 font:
                     family: global.text_font_family
-                    fill: [0.950,0.950,0.950]
+                    fill: [0.500,0.500,0.500]
             # END NOTE
 
         country:
@@ -1091,8 +1152,8 @@ layers:
                     visible: true
                     text_source: global.ux_language_text_source
                     font:
-                        fill: [0.450,0.450,0.450]
-                        stroke: { color: [0.224,0.224,0.224], width: 4px }
+                        fill: [0.650,0.650,0.650]
+                        stroke: { color: [0.957,0.969,0.976], width: 4px }
             country-z2-3:
                 filter:
                     $zoom: [2,3]
@@ -1199,8 +1260,8 @@ layers:
                     font:
                         size: 11px
                         weight: normal
-                        fill: [0.400,0.400,0.400]
-                        stroke: { color: [0.224,0.224,0.224], width: 4px }
+                        fill: [0.700,0.700,0.700]
+                        stroke: { color: [0.957,0.969,0.976], width: 4px }
             region-z4:
                 filter:
                     $zoom: [4]
@@ -1279,7 +1340,7 @@ layers:
                     buffer: 42px
                     font:
                         size: [[5,9px],[8,10px],[12,11px]]
-                        stroke: { color: [0.224,0.224,0.224], width: 5px }
+                        stroke: { color: [0.957,0.969,0.976], width: 5px }
 
             # _text_early:
             #     filter: { $zoom: { max: 11 } }
@@ -1441,11 +1502,11 @@ layers:
                     text_wrap: 10
                     max_lines: 2
                     font:
-                        fill: [0.450,0.450,0.450]
+                        fill: [0.700,0.700,0.700]
                         size: [[11, 9px], [12, 10px], [13, 12px], [14, 16px], [16, 24px]]
                         weight: normal
                         transform: uppercase
-                        stroke: { color: [0.224,0.224,0.224], width: [[12, 4px], [13, 6px], [15, 8px]] }
+                        stroke: { color: [0.957,0.969,0.976], width: [[12, 4px], [13, 6px], [15, 8px]] }
 
             z13-up:
                 filter:
