--- a/scene.yaml
+++ b/scene.yaml
@@ -957,6 +957,22 @@ layers:
                     color: [0.988,0.980,0.871]
                     visible: true
 
+        glacier:
+            filter:
+                kind: glacier
+            draw:
+                polygons:
+                    color: [0.910,0.949,1.000]
+                    visible: true
+
+        military:
+            filter:
+                kind: military
+            draw:
+                polygons:
+                    color: [0.922,0.929,0.949]
+                    visible: true
+
         runway:
             filter:
                 kind: runway
